force-app/main/default/objects/TimeSheet/TimeSheet.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>