force-app/main/default/objects/TimeSheet/fields/Day_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_End_Time__c</fullName>
    <description>Installer entered end time for the day (button on the FSL app).</description>
    <label>Day End Time</label>
    <type>DateTime</type>
</CustomField>