force-app/main/default/objects/TimeSheet/fields/Day_End_Time_without_seconds__c.field-meta.xml
<CustomField>
    <fullName>Day_End_Time_without_seconds__c</fullName>
    <formula>Day_End_Time__c -SECOND(timevalue( Day_End_Time__c ))/86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day End Time without seconds</label>
    <type>DateTime</type>
</CustomField>