force-app/main/default/objects/TimeSheet/fields/Day_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_Start_Time__c</fullName>
    <description>Installer entered start time for the day (button on the FSL app).</description>
    <label>Day Start Time</label>
    <type>DateTime</type>
</CustomField>