force-app/main/default/objects/TimeSheet/fields/DistanceFromHomeToWork__c.field-meta.xml
<CustomField>
    <fullName>DistanceFromHomeToWork__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Traveling Distance from Home to Work in km</description>
    <inlineHelpText>Traveling Distance from Home to Work in km</inlineHelpText>
    <label>Distance From Home To Work</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>