force-app/main/default/objects/TimeSheet/fields/DistanceFromWorkToHome__c.field-meta.xml
<CustomField>
    <fullName>DistanceFromWorkToHome__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Traveling Distance from Work to Home in km</description>
    <inlineHelpText>Traveling Distance from Work to Home in km</inlineHelpText>
    <label>Distance From Work To Home</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>