force-app/main/default/objects/TimeSheet/fields/I_am_the_approver__c.field-meta.xml
<CustomField>
    <fullName>I_am_the_approver__c</fullName>
    <description>Needed for list view filtering.</description>
    <formula>LUM_Approver__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I am the approver</label>
    <type>Checkbox</type>
</CustomField>