force-app/main/default/objects/TimeSheet/fields/LUM_Approver__c.field-meta.xml
<CustomField>
    <fullName>LUM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>