force-app/main/default/objects/TimeSheet/fields/LUM_Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>LUM_Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delegated_Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>