force-app/main/default/objects/TimeSheet/fields/LUM_To_be_approved__c.field-meta.xml
<CustomField>
    <fullName>LUM_To_be_approved__c</fullName>
    <formula>LUM_Approver__c =  $User.Id  ||  LUM_Delegated_Approver__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To be approved</label>
    <type>Checkbox</type>
</CustomField>