force-app/main/default/objects/TimeSheet/fields/Mileage_to_Home__c.field-meta.xml
<CustomField>
    <fullName>Mileage_to_Home__c</fullName>
    <description>Indicates the mileage from customer&apos;s site or office to Installer&apos;s home.</description>
    <label>Mileage from site to home</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>