force-app/main/default/objects/TimeSheet/fields/Mileage_to_Site__c.field-meta.xml
<CustomField>
    <fullName>Mileage_to_Site__c</fullName>
    <description>Indicates the mileage from Installer&apos;s home to either office or the customer site.</description>
    <label>Mileage from home to site</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>