force-app/main/default/objects/TimeSheet/listViews/All_Time_Sheets.listView-meta.xml
<ListView>
    <fullName>All_Time_Sheets</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>ServiceResource</columns>
    <columns>Id</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>TimeSheetEntryCount</columns>
    <filterScope>Everything</filterScope>
    <label>All Time Sheets</label>
</ListView>