force-app/main/default/objects/TimeSheet/listViews/Approved_Time_Sheets.listView-meta.xml
<ListView>
    <fullName>Approved_Time_Sheets</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>ServiceResource</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Time Sheets</label>
</ListView>