force-app/main/default/objects/TimeSheet/listViews/Time_Sheets_to_be_approved.listView-meta.xml
<ListView>
    <fullName>Time_Sheets_to_be_approved</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>ServiceResource</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LUM_To_be_approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <label>Time Sheets to be approved</label>
</ListView>