force-app/main/default/objects/TimeSheet/listViews/TS_by_start_date.listView-meta.xml
<ListView>
    <fullName>TS_by_start_date</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>StartDate</columns>
    <columns>ServiceResource</columns>
    <columns>Status</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <label>TS by start date</label>
</ListView>